--- a/src/app/chat/components/chat-starter/chat-starter.component.html
+++ b/src/app/chat/components/chat-starter/chat-starter.component.html
@@ -1,1 +1,15 @@
+<div class="flex-center">
+  <h2>Please enter your name to start chat...</h2>
+</div>
 
+<div class="flex-center">
+
+  <mat-form-field appearance="outline" class="name-form">
+    <input matInput placeholder="Your name"/>
+
+    <button mat-icon-button matSuffix>
+      <mat-icon>chat_bubble</mat-icon>
+    </button>
+  </mat-form-field>
+
+</div>
