--- a/src/app/chat/components/chat-input/chat-input.component.html
+++ b/src/app/chat/components/chat-input/chat-input.component.html
@@ -1,4 +1,13 @@
 <div class="flex-center">
-  <p>chat-input works!</p>
+
+  <div class="input-area">
+    <mat-form-field appearance="outline">
+      <input matInput placeholder="Enter you message"/>
+      <button mat-icon-button matSuffix>
+        <mat-icon>send</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+
 </div>
 
