add ngRx  dependacy + implement start conversation feature

--- a/src/app/chat/components/chat-messages/chat-messages.component.html
+++ b/src/app/chat/components/chat-messages/chat-messages.component.html
@@ -3,7 +3,7 @@
     <div class="messages">
 
       <div class="message-header">
-        <h2>{{ username }}</h2>
+        <h2 class="username">{{ username$ | async}}</h2>
       </div>
       <mat-divider></mat-divider>
       <div class="chat-area">
