implement chat feature

--- a/src/app/chat/components/chat-messages/chat-messages.component.html
+++ b/src/app/chat/components/chat-messages/chat-messages.component.html
@@ -7,7 +7,7 @@
       </div>
       <mat-divider></mat-divider>
       <div class="chat-area">
-        @for (message of messages; track message.content) {
+        @for (message of (messages$ | async); track message.content) {
           <div class="chat-bubble" [class.user]="message.sender === 'user'" [class.bot]="message.sender === 'bot'">
             {{ message.content }}
             <span class="chat-date">
