--- a/src/app/chat/components/chat-input/chat-input.component.html
+++ b/src/app/chat/components/chat-input/chat-input.component.html
@@ -2,8 +2,12 @@
 
   <div class="input-area">
     <mat-form-field appearance="outline">
-      <input matInput placeholder="Enter you message"/>
-      <button mat-icon-button matSuffix>
+      <input matInput placeholder="Enter you message" [formControl]="messageFormControl"/>
+      <button mat-icon-button matSuffix
+              class="btn-send-message"
+              (keydown.enter)="sendUserMessage()"
+              (click)="sendUserMessage()"
+              [disabled]="disableSendMessage()">
         <mat-icon>send</mat-icon>
       </button>
     </mat-form-field>
