implement clear chat history feature

--- a/src/app/chat/components/chat-input/chat-input.component.html
+++ b/src/app/chat/components/chat-input/chat-input.component.html
@@ -11,6 +11,12 @@
         <mat-icon>send</mat-icon>
       </button>
     </mat-form-field>
+
+    <button mat-raised-button
+            class="btn-reset-message"
+            (click)="clearChatHistory()">
+      Clear
+    </button>
   </div>
 
 </div>
