add chat loader

--- a/src/app/chat/components/chat-loader/chat-loader.component.html
+++ b/src/app/chat/components/chat-loader/chat-loader.component.html
@@ -1,1 +1,8 @@
-<p>chat-loader works!</p>
+<div class="flex-center">
+  <div class="snippet" data-title="dot-elastic">
+    <div class="stage">
+      <div class="dot-elastic"></div>
+    </div>
+  </div>
+</div>
+
