--- a/src/app/chat/components/chat-messages/chat-messages.component.html
+++ b/src/app/chat/components/chat-messages/chat-messages.component.html
@@ -15,7 +15,12 @@
               </span>
           </div>
         }
+        @if ((isLoading$ | async)) {
+          <chat-loader></chat-loader>
+        }
+
       </div>
+
     </div>
 
   </div>
